Edited css link

--- a/views/about.html
+++ b/views/about.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <!-- Using Minty Theme-->
-        <link href="/css/bootstrap.css" rel="stylesheet">  
-        <link rel="stylesheet" href="/css/main.css" />
+        <link rel="stylesheet" href="../public/css/bootstrap.css">  
+        <link rel="stylesheet" href="../public/css/main.css" />
 
         <title>About</title>
     </head>
